# stl2step

./: .gitmodules  CMakeLists.txt  Custom.cmake  README.md
build_commands/: 0_load_qt.bash  1_clean.bash  1_clean_config.bash  1_clean_config.bat  1_clean_config.zsh  1_config.bat  1_config.zsh  1_config_default.bash  1_config_mingw32.bash  2_build.bash  2_build.bat  2_build.zsh  3_install.bash  3_install.bat  3_install.zsh  4_run.bash  4_run.bat  4_run.zsh  4_run_valgrind.bash  5_build-docs_html.bash  5_build-docs_html.bat  5_build-docs_html.zsh  5_build-docs_pdf.bash  5_build-docs_pdf.bat  5_build-docs_pdf.zsh  5_pack_distrib.bash  5_pack_distrib.bat  5_pack_distrib.zsh  5_pack_sources.bash  5_pack_sources.bat  5_pack_sources.zsh  6_check_pvs.bash  6_check_pvs.bat  6_check_pvs.zsh
build_scripts/: 0_setup_qt.cmake  1_clean.cmake  1_clean_config.cmake  1_config.cmake  2_build.cmake  2_install.cmake  3_run.cmake  4_build-docs_html.cmake  4_build-docs_pdf.cmake  4_pack_distrib.cmake  4_pack_sources.cmake  5_check_pvs.cmake  build_build.cmake  build_config.cmake  build_html.cmake  build_install.cmake  build_pack_distrib.cmake  build_pack_sources.cmake  build_pdf.cmake  build_remove_builddir.cmake  build_remove_zerofile.cmake  build_set_builddir.cmake  build_set_compiler.cmake  build_set_config.cmake  build_set_generator.cmake  build_set_loglevel.cmake  build_set_qt.cmake  build_set_source.cmake
doc/: doxygen.sty  header.htm  header.tex  stylesheet.css
doc/images/part_11/: convert.sh  misc.txt
doxygen/: clean.bat  doxygen.sty  make_html.bat  make_pdf.bat  new_header.html  new_header.tex  new_stylesheet.css  noindex!!!  stl2step.Doxyfile
icons/: icon.odg
scripts/: CPpack.cmake  PVS-Studio.cmake  build_ext_binary.cmake  build_icons.cmake  collect_deps.cmake  get_file_deps.cmake  produce_html.cmake  produce_pdf.cmake  remove_zerofile.cmake
src/: Makefile  all_gcc_warnings.txt  cpp.hint  err.cpp  err.h  express.h  express_aggregate.cpp  express_aggregate.h  express_aggregate_array.h  express_aggregate_bag.h  express_aggregate_bag_and_set.h  express_aggregate_list.h  express_aggregate_set.h  express_constants.cpp  express_constants.h  express_doc.h  express_entity.h  express_enumeration.h  express_functions.cpp  express_functions.h  express_generic.cpp  express_generic.h  express_select.h  express_simple.cpp  express_simple.h  express_simple_binary.cpp  express_simple_binary.h  express_simple_boolean.cpp  express_simple_boolean.h  express_simple_integer.cpp  express_simple_integer.h  express_simple_logical.cpp  express_simple_logical.h  express_simple_number.cpp  express_simple_number.h  express_simple_real.cpp  express_simple_real.h  express_simple_string.cpp  express_simple_string.h  express_sugar.h  (+34 more)
src/stl2step/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  doc_iso10303_1.hxx  doc_iso10303_203.hxx  err.h  express.h  express_constants.h  express_list.h  express_simple.h  geometry.cpp  geometry.h  iso10303_41.cpp  iso10303_41.h  iso10303_42.cpp  iso10303_42.h  iso10303_43.cpp  iso10303_43.h  iso10303_43a.h  iso10303_44.h  iso10303_46.cpp  iso10303_46.h  iso10303_511.h  iso10303_514.h  iso10303_517.cpp  iso10303_517.h  precision.h  shell.cpp  shell.h  stdafx.cpp  stdafx.h  stl2step.cpp  support.cpp  support.h  support_proc_shell.cpp  targetver.h
tests/: bad_blue.stl  bad_blue2.stl  blue.stl  label.stl  metals h.stl  metals_l.stl  plastic.stl
